  03 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> +metadata.xml,
  ovirt-iso-uploader-9999.ebuild:
  initial add

*ovirt-iso-uploader-9999 (21 Jan 2013)

  21 Jan 2013; Stijn Tintel <stijn+gentoo@linux-ipv6.be>
  +ovirt-iso-uploader-9999.ebuild:
  Initial import. Ebuild by me.